[add] HomeとWorksのレスポンシブを追加

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
         <!-- font-family Economicaのための宣言 -->
         <link href="https://fonts.googleapis.com/css?family=Economica:700"
         rel="stylesheet">
+        <!-- Google Material Icons -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>JPig</title>
     </head>
     <body>
