--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         rel="stylesheet">
         <!-- Google Material Icons -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <title>JPig</title>
+        <title>Jumpei</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
